<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#D1D1CF"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/roomsListItem"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/roomNameTV"
            android:text="Room"
            android:textSize="20sp"
            android:background="#009688"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brokenIntoLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/break_in_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fireDetectedLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carbonMonoxideDetectedLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carbon_monoxide_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/floodDetectedLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flood_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movementDetectedLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unexpected_movement_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/openTapLayout"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tap_open_alert"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/temperatureLayout"
            >

            <TextView
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="temperature"/>

            <TextView
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/temperatureTV"
                android:text="24"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/humidityLayout">

            <TextView
                android:textSize="16sp"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="humidity"/>

            <TextView
                android:paddingLeft="15dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/humidityTV"
                android:text="50%"/>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#009688"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lightingLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="lighting"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/ceilingLightLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ceilingLightTV"
                        android:layout_gravity="center"
                        android:text="ceiling"/>

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:id="@+id/ceilingLightSwitch"/>

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/wallLightLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wallLightTV"
                        android:layout_gravity="center"
                        android:text="wall"/>

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_gravity="left"
                        android:id="@+id/wallLightSwitch"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/bedsideLeftLightLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bedsideLeftLightTV"
                        android:layout_gravity="center"
                        android:text="left bedside"/>

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_gravity="left"
                        android:id="@+id/bedsideLeftLightSwitch"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:id="@+id/bedsideRightLightLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bedsideRightLightTV"
                        android:text="right bedside"
                        android:layout_gravity="center"/>

                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:layout_gravity="left"
                        android:id="@+id/bedsideRightLightSwitch"/>

                </LinearLayout>

        </LinearLayout>

    </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#009688"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cameraLayout"
            android:layout_gravity="center">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraSwitch"
                android:text="Camera on standby"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cameraPreviewButton"
                android:text="Preview"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#009688"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/presenceLayout"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/presenceTV"
                android:text="No person present in room"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doorLayout"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/openDoorTV"
                android:text="Door shut and locked"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/windowLayout"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/openWindowTV"
                android:text="Windows shut"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bathtubLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bathtubMenuButton"
                android:text="bathtub"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/washingMachineLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/washingMachineMenuButton"
                android:text="washing machine"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ovenLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ovenMenuButton"
                android:text="oven"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dishwasherLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dishwasherMenuButton"
                android:text="dishwasher"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/refrigeratorLayout">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/refrigeratorMenuButton"
                android:text="refrigerator"/>

        </LinearLayout>

      </LinearLayout>
    </LinearLayout>